adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, similique deleniti. Quis voluptates, dolores a iusto eos aperiam nam veniam numquam. Rem quas quos deserunt. Obcaecati eius nemo eum rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse impedit sapiente est consectetur nesciunt, minus quia delectus corporis accusantium quasi, hic voluptates doloribus minima nam tenetur exercitationem eum totam ipsam.</p>
 </body>
 </html>
